# AVBD3D

./: CMakeLists.txt  README.md  depr.txt
include/: CMakeLists.txt
shaders/: fragment.glsl  vertex.glsl
src/: camera.cpp  collision.cpp  collision.h  contact.cpp  contactHelper.cpp  engine.cpp  engine.h  epa.cpp  force.cpp  gjk.cpp  helper.cpp  includes.cpp  includes.h  linear.cpp  main.cpp  manifold.cpp  mat3x6.cpp  mat6x3.cpp  mat6x6.cpp  mesh.cpp  mesh.h  rigid.cpp  rigid.h  solver.cpp  solver.h  vec6.cpp
src/collision/: collision.cpp  collision.h  face.h  manifold.cpp  supportPoint.h
src/debug_utils/: debug.h  print.cpp  print.h
src/linalg/: ldlt.cpp  ldlt.h  linalg.cpp  linalg.h  mat3x6.cpp  mat3x6.h  mat6x3.cpp  mat6x3.h  mat6x6.cpp  mat6x6.h  vec6.cpp  vec6.h
src/parallel/: ColorPQ.h  threadPool.cpp  threadPool.h
src/render/: engine.cpp  engine.h  shader.cpp  shader.h
src/util/: includes.h  random.h  unorderedArray.h
